# kraken-rebalance-bot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  backtesting.ipynb  example_config.json  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: _build.yaml  _codeql.yaml  _pre_commit.yaml  _pypi_publish.yaml  ci.yaml  dependabot_auto_merge.yaml  release.yaml
example/: backtesting.ipynb  config.json  example.env
examples/: backtesting.ipynb  config.json  main.py  minimal.config.example.json
examples/docker/: .docker.env  Dockerfile  main.py
krakenRebalanceBot/: bot.py
rebalance/: __init__.py  bot.py
