[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-rebalance-bot"
dynamic = ["version"]
authors = [
  { name = "Benjamin Thomas Schwertfeger", email = "contact@b-schwertfeger.de" },
]
description = "A rebalance trading bot for the Kraken cryptocurrency exchange."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = ["python-kraken-sdk~=3.1", "schedule", "requests"]
keywords = ["crypto", "trading", "kraken", "exchange", "api"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.scripts]
rebalance = "rebalance:run"

[project.urls]
Homepage = "https://github.com/btschwertfeger/Kraken-Rebalance-Bot"
"Bug Tracker" = "https://github.com/btschwertfeger/Kraken-Rebalance-Bot/issues"

[project.optional-dependencies]
dev = [
  # building
  "build",
  # formatting
  "black",
  # typing
  "mypy",
  "types-requests",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["rebalance"]
exclude = ["docs*", "tests*", "examples*", ".env"]

[tool.setuptools_scm]
write_to = "rebalance/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


# ========= T Y P I N G =======================================================
#
[tool.mypy]
python_version = "3.11"
# junit_xml = "mypy.xml"
files = ["rebalance/**/*.py"]

# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

# # Untyped definitions and calls
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false

# None and Optional handling
implicit_optional = true
strict_optional = false

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Suppressinng errors
ignore_errors = false

# Configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
pretty = true
color_output = true
show_absolute_path = true
ignore_missing_imports = true
